<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".Registration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_registry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/login_description"
            android:textColor="@android:color/tertiary_text_dark"
            android:textSize="40sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="200dp"
            android:layout_height="3dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/tv_registry2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/login_description2"
            android:textColor="@android:color/tertiary_text_dark"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/layout_edit_text"
            android:ems="10"
            android:hint="@string/hint_username"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/layout_edit_text"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_button"
            android:text="@string/button_login"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnToRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@android:color/transparent"
            android:text="@string/button_registry"
            android:textColor="#8F8F8F" />
    </LinearLayout>
</LinearLayout>