<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_scoreboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Scoreboard"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="200dp">

            <TextView
                android:id="@+id/tv_headlineUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="40dp"
                android:textStyle="bold"
                android:text="@string/header_user" />

            <TextView
                android:id="@+id/tv_headlineScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="40dp"
                android:textStyle="bold"
                android:text="@string/header_score" />

            <TextView
                android:id="@+id/tv_headlineScoreTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="20dp"
                android:textStyle="bold"
                android:text="@string/header_total" />

            <TextView
                android:id="@+id/tv_headlineScorePercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="20dp"
                android:textStyle="bold"
                android:text="@string/header_percent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/tv_user1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="40dp" />

            <TextView
                android:id="@+id/tv_score1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="40dp" />

            <TextView
                android:id="@+id/tv_scoreTotal1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="20dp" />

            <TextView
                android:id="@+id/tv_scorePercent1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/tv_user2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="40dp" />

            <TextView
                android:id="@+id/tv_score2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="40dp" />

            <TextView
                android:id="@+id/tv_scoreTotal2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="20dp" />

            <TextView
                android:id="@+id/tv_scorePercent2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/tv_user3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="40dp" />

            <TextView
                android:id="@+id/tv_score3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="40dp" />

            <TextView
                android:id="@+id/tv_scoreTotal3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="20dp" />

            <TextView
                android:id="@+id/tv_scorePercent3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="300dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnNewGame"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/layout_button"
                android:text="@string/button_newGame"
                android:textAlignment="center"
                android:layout_marginLeft="40dp"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/layout_button"
                android:text="@string/button_logout"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>